--- a/Client/Properties/launchSettings.json
+++ b/Client/Properties/launchSettings.json
@@ -10,13 +10,14 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "http://localhost:5080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "hotReloadProfile": "aspnetcore"
     },
     "IIS Express": {
       "commandName": "IISExpress",
