--- a/Server/XpressR.Server.csproj
+++ b/Server/XpressR.Server.csproj
@@ -19,6 +19,10 @@
     <ProjectReference Include="..\Client\XpressR.Client.csproj" />
     <ProjectReference Include="..\Shared\XpressR.Shared.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Watch Include="..\Client\**\*.razor"/>
+  </ItemGroup>
 
 
 </Project>
