ViewOne with Google API

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=3306;userid=root;password=root;database=xpressr;"
+    "DefaultConnection": "Server=localhost;port=3306;userid=root;password=15927605Dr!;database=xpressr;"
   }
 }
